@@ -28,6 +28,8 @@ TO DO
 Core and Builtins
 -----------------
 
+- Remove the exceptions module, all the exceptions are already builtin.
+
 - input() becomes raw_input(): the name input() now implements the
   functionality formerly known as raw_input(); the name raw_input()
   is no longer defined.
